<resources>
    <string name="nothing" translatable="false" />

    <string name="app_name">Pixel Artist</string>

    <!-- Color selector -->
    <string name="color_selector">Color Selector</string>
    <string name="color_selector_apply">Apply</string>

    <!-- Menu items -->
    <string name="menu_new">New</string>
    <string name="menu_open">Open</string>
    <string name="menu_save">Save</string>
    <string name="menu_export">Export</string>
    <string name="menu_about">About</string>
    <string name="menu_fill">Fill screen with selected color</string>
    <string name="menu_grid">Show/hide pixel grid</string>

    <!-- Alert dialogs -->
    <string name="alert_dialog_title_new">New drawing</string>
    <string name="alert_dialog_message_new">
        Creating a new drawing will erase the old one.
        \n\nThis operation cannot be undone!
    </string>
    <string name="alert_dialog_title_fill">Fill drawable area</string>
    <string name="alert_dialog_message_fill">
        This will fill the drawable area with the selected color.
        \n\nThis operation cannot be undone!
    </string>

    <!-- Toasts -->
    <string name="toast_save">Not implemented yet, sorry! Use the screen capture :)</string>
    <string name="toast_saved">File saved</string>
    <string name="toast_not_saved">File could not be saved</string>
    <string name="toast_could_not_create_app_folder">Couldn\'t create app folder</string>
    <string name="toast_confirm_quit">Press back again to quit!</string>
    <string name="toast_zoom_out_min">Can not zoom out(very small)!</string>
    <string name="toast_zoom_in_max">Can not zoom in(very big)!</string>
    <string name="toast_duplicate_color">Color is exist!</string>

    <!-- Files -->
    <string name="file_name">Filename</string>
    <string name="file_opened">File opened successfully</string>
    <string name="file_could_not_open">Couldn\'t open file</string>
    <string name="file_not_found">File not found</string>
    <string name="file_no_files_found">No files found</string>

    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Write permission -->
    <string name="write_permission_unavailable">App doesn\'t have write permission!</string>
    <string name="write_permission_granted">Write permission has been granted.</string>

    <!-- Error messages -->
    <string name="error_something_went_wrong">Something went wrong</string>

    <!--function-->
    <string name="size_broad" translatable="false">Size:\n%dx%d</string>


    <string name="new_paper">New Paper</string>
    <string name="confirm_create_new_paper">Create new paper:\n(Please save before create new file, because all pixels will clear)</string>
    <string name="create_new_paper">Create new paper:</string>
    <string name="width">Width</string>
    <string name="height">Height</string>

    <string name="wrong_input_width">Please input width</string>
    <string name="wrong_input_height">Please input height</string>
    <string name="btn_new_paper">New Paper</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>

</resources>
