<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_create_new_paper"
        android:layout_margin="@dimen/padding_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_item"
        android:text="@string/width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_top" />

    <TextView
        android:id="@+id/v_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_top" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_item"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="@id/v_center"
        app:layout_constraintTop_toBottomOf="@id/tv_top" />

    <EditText
        android:id="@+id/edt_width"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_item"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/v_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_width" />

    <EditText
        android:id="@+id/edt_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_item"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/v_center"
        app:layout_constraintTop_toBottomOf="@id/tv_width" />


</androidx.constraintlayout.widget.ConstraintLayout>
