<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rodrigodavy.com.github.pixelartist.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/view_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/paper_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:orientation="vertical">
            </LinearLayout>

        </HorizontalScrollView>

    </ScrollView>

    <!--color-->
    <TextView
        android:id="@+id/v_curr_color"
        android:layout_width="@dimen/curr_color_width"
        android:layout_height="@dimen/curr_color_height"
        android:layout_marginRight="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_function"
        />
    <View
        android:id="@+id/v_space_color"
        android:layout_width="2dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/v_curr_color"
        app:layout_constraintTop_toTopOf="@id/v_curr_color"
        app:layout_constraintBottom_toBottomOf="@id/v_curr_color"
        android:background="@drawable/top_shadow_gradient" />
    <TextView
        android:id="@+id/v_add_color"
        android:layout_width="@dimen/add_color_width"
        android:layout_height="@dimen/curr_color_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_function"
        android:text="+"
        android:gravity="center"
        android:textSize="30sp"
        android:background="@drawable/btn_gray"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/v_curr_color"
        app:layout_constraintBottom_toTopOf="@id/view_function"
        app:layout_constraintEnd_toStartOf="@id/v_add_color"
        app:layout_constraintStart_toEndOf="@id/v_space_color"
        />
    <!--shadow-->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/v_add_color"
        android:background="@drawable/top_shadow_gradient" />

    <!--more function-->
    <LinearLayout
        android:id="@+id/view_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_quarter_item"
        android:paddingBottom="@dimen/padding_quarter_item"
        android:background="@color/white_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_size_broad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="13sp"
            android:layout_marginLeft="@dimen/padding_half_item"
            android:layout_marginRight="@dimen/padding_half_item"
            tools:text="Size:\n20x20"
            />

        <TextView
            android:id="@+id/new_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_item"
            android:text="@string/btn_new_paper"
            android:background="@drawable/btn_white_corner"
            />
        <TextView
            android:id="@+id/view_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/zoom_in"
            android:layout_marginLeft="@dimen/padding_item"
            android:background="@drawable/btn_white_corner"
            />

        <TextView
            android:id="@+id/view_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/zoom_out"
            android:layout_marginLeft="@dimen/padding_item"
            android:background="@drawable/btn_white_corner"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
